fixed about me section with text alignment issues

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 :root {
-    --primary: darkgrey;  
+    --primary:radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(210,70,252,0.5494572829131652) 100%) ;  
     --accent: white;
 }
 
@@ -7,6 +7,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: serif;
 }
 body{ 
     background: linear-gradient(#e66465, #9198e5);;}
@@ -14,7 +15,7 @@ body{
 header{
     padding: 20px 35px;
     background: rgb(63,94,251);
-    background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(210,70,252,0.5494572829131652) 100%);
+    background: var(--primary);
     display:flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -22,20 +23,55 @@ header{
 }
 
 main {
-    min-height: 85vh;
+    min-height: 70vh;
 }
 
-header nav ul{
+h2{
+    font-size: 50px;
+}
+
+.sidebar{
+    border-right: 5px solid white ;
+    min-height: 100%;
+    text-align: right;
+    padding-right: 40px;
+    min-width: 15%;
+    max-width: 15%;
+    flex-grow: 1;
+}
+
+  
+  
+.content{
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    list-style: none;
-    text-decoration: none;
-    } 
+    padding:  0 20px;
+   
+    
 
     
-.hero-image {
+    }
+
+
+  
+
+header nav ul{
+    padding-top: 15px;
+    margin-right: 20px;
+    float: right;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+    list-style-type: none ;
+    text-decoration: none;
+    color: black
+    
+    } 
+header nav ul li {
+        display: inline-block;
+        margin-left: 25px;
+    }
+
+    
+.banner{
     height: 300px;
     background-image: url("./images/banner.jpg");
     background-size: cover;
@@ -47,42 +83,41 @@ header nav ul{
   }
   
 
-  .hero-text {
+.banner-text {
     text-align: right;
     position: absolute;
     top: 70%;
     right: 10%;
     color: black;
     padding: 20px 35px;
-    background: rgb(63,94,251);
-    background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(210,70,252,0.5494572829131652) 100%);
+    background: var(--primary);
     box-shadow: 5px 10px 10px 10px black;
     font-size: 20px;
   }
   
+  .card{
+    width: 100%;
+    height: 150px;
+    padding: 40px;
+
+
+  }
 
 
     
 
 footer{
-    padding: 20px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: #2a607c;
-    color: #ffffff;
-    text-decoration: none;
-}
-footer nav ul
-{
-    display: flex;
+    padding: 20px 35px;
+    display:flex;
+    justify-content: space-between;
     flex-wrap: wrap;
-    justify-content: right;
-    align-items: center;
-    list-style: none;
-    text-decoration: none;
-    } 
+    border-right: 5px solid white ;
+    min-height: 100%;
+    min-width: 15%;
+    max-width: 15%;
 
-article{
-    width:30%;
-    border: 2px  dashed var(--primary);
-    height: 200px;
+}
+footer nav ul li {
+    display: inline-block;
+        margin-right: 25px;
 }
